DIRAGBA-405 Implement base structure of the MatchPortal

--- a/1/DirectAgents.Domain/App.config
+++ b/1/DirectAgents.Domain/App.config
@@ -12,6 +12,7 @@
     <add name="RevTrackContext" connectionString="" providerName="System.Data.SqlClient"/>
     <add name="WikiContext" connectionString="" providerName="System.Data.EntityClient"/>
     <add name="SecurityEntities" connectionString="" providerName="System.Data.EntityClient"/>
+    <add name="DAData" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
