--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -263,9 +263,15 @@
     <Compile Include="Areas\Cake\Models\AdvertiserStatsVM.cs" />
     <Compile Include="Areas\ClientAdmin\ClientAdminAreaRegistration.cs" />
     <Compile Include="Areas\ClientAdmin\Controllers\ClientReportsController.cs" />
-    <Compile Include="Areas\MatchPortal\Controllers\ProductMatchingController.cs" />
+    <Compile Include="Areas\MatchPortal\Controllers\ProductsController.cs" />
+    <Compile Include="Areas\MatchPortal\Helpers\DropDownProvider.cs" />
     <Compile Include="Areas\MatchPortal\MatchPortalAreaRegistration.cs" />
-    <Compile Include="Areas\MatchPortal\Models\ProductMatchingVm.cs" />
+    <Compile Include="Areas\MatchPortal\Helpers\MpTempDataContext.cs" />
+    <Compile Include="Areas\MatchPortal\Models\MatchFilterVM.cs" />
+    <Compile Include="Areas\MatchPortal\Models\MatchProductVM.cs" />
+    <Compile Include="Areas\MatchPortal\Models\MatchResultVM.cs" />
+    <Compile Include="Areas\MatchPortal\Models\ResultFilterVM.cs" />
+    <Compile Include="Areas\MatchPortal\Models\SearchResultVM.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\ActionsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\Adform\AdformController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\CampStatsController.cs" />
@@ -1234,9 +1240,12 @@
     <Content Include="Areas\ProgAdmin\Views\DBM\Latests.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\YAM\Latests.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Adform\Latests.cshtml" />
-    <Content Include="Areas\MatchPortal\Views\ProductMatching\Index.cshtml" />
-    <Content Include="Areas\MatchPortal\_ViewStart.cshtml" />
-    <Content Include="Areas\MatchPortal\Views\Shared\_LayoutTD.cshtml" />
+    <Content Include="Areas\MatchPortal\Views\Products\Index.cshtml" />
+    <Content Include="Areas\MatchPortal\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\MatchPortal\Views\Shared\_LayoutMatchPortal.cshtml" />
+    <Content Include="Areas\MatchPortal\Views\web.config" />
+    <Content Include="Areas\MatchPortal\Views\Products\Match.cshtml" />
+    <Content Include="Areas\MatchPortal\Views\Products\Result.cshtml" />
     <None Include="Properties\PublishProfiles\dagents_vm_staging.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
