--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -87,6 +87,7 @@
     <add key="PATH_Search" value="C:\DA\portal\search" /><!-- change for azure-web (excel reps) -->
 
     <add key="CakeApiKey" value="" />
+    <add key="RokuAuthKey" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
 
     <add key="AdWordsReportFilePath" value="C:\Reports\Adwords\adwordsrep.xml" />
