DIRAGBA-323 add Pda accounts for Amazon api

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -74,6 +74,7 @@
     <add key="AmazonAuthCode_Alt2" value="" /><!-- granted access to amazonaccess@directagents.com account -->
     <add key="Amazon_Alt3" value="3335990284144083" /><!-- Living Fresh (this is not Amazon name) -->
     <add key="AmazonAuthCode_Alt3" value="" /><!-- granted access to livingfresh@directagents.com account -->
+    <add key="AmazonPdaAccounts" value="1666204116802412,3563943872088354,2985596256025751,506658790463709,2809006642760398,182843416908271,3567442180416187,2533820163045314,223611984308153,3257737750060910" />
     <!--Amazon Advertising Access - FINISH-->
 
     <add key="GmailEmailer_Username" value="portal@directagents.com" />
