--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -454,7 +454,17 @@
     <Compile Include="Common\JobExecutionManagement\JobRequests\Repositories\IJobRequestsRepository.cs" />
     <Compile Include="Common\JobExecutionManagement\JobRequests\Services\RetryRequestsHolder.cs" />
     <Compile Include="Common\JobExecutionManagement\JobRequests\Utils\CommandSchedulingUtils.cs" />
+    <Compile Include="Common\MatchingPortal\Models\MatchFilter.cs" />
+    <Compile Include="Common\MatchingPortal\Models\MatchResult.cs" />
+    <Compile Include="Common\MatchingPortal\Models\Product.cs" />
+    <Compile Include="Common\MatchingPortal\Models\ResultFilter.cs" />
+    <Compile Include="Common\MatchingPortal\Models\SearchResult.cs" />
+    <Compile Include="Common\MatchingPortal\Providers\SelectOptionsProvider.cs" />
     <Compile Include="Common\MatchingPortal\Repositories\MatchPortalRepository.cs" />
+    <Compile Include="Common\MatchingPortal\Services\FilterService.cs" />
+    <Compile Include="Common\MatchingPortal\Services\Interfaces\IFilterService.cs" />
+    <Compile Include="Common\MatchingPortal\Services\Interfaces\IProductMatchingService.cs" />
+    <Compile Include="Common\MatchingPortal\Services\ProductMatchingService.cs" />
     <Compile Include="Common\StatsTypeAgg.cs" />
     <Compile Include="Commands\EOMSynchCPCCommand.cs" />
     <Compile Include="Commands\DA\DASeed.cs" />
@@ -1074,9 +1084,7 @@
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\DirectAgents.Web\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Common\MatchingPortal\Services\Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
