--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -454,6 +454,7 @@
     <Compile Include="Common\JobExecutionManagement\JobRequests\Repositories\IJobRequestsRepository.cs" />
     <Compile Include="Common\JobExecutionManagement\JobRequests\Services\RetryRequestsHolder.cs" />
     <Compile Include="Common\JobExecutionManagement\JobRequests\Utils\CommandSchedulingUtils.cs" />
+    <Compile Include="Common\MatchingPortal\Models\DataFrameExport.cs" />
     <Compile Include="Common\MatchingPortal\Models\MatchFilter.cs" />
     <Compile Include="Common\MatchingPortal\Models\MatchResult.cs" />
     <Compile Include="Common\MatchingPortal\Models\Product.cs" />
@@ -461,7 +462,9 @@
     <Compile Include="Common\MatchingPortal\Models\SearchResult.cs" />
     <Compile Include="Common\MatchingPortal\Providers\SelectOptionsProvider.cs" />
     <Compile Include="Common\MatchingPortal\Repositories\MatchPortalRepository.cs" />
+    <Compile Include="Common\MatchingPortal\Services\CsvDataExportService.cs" />
     <Compile Include="Common\MatchingPortal\Services\FilterService.cs" />
+    <Compile Include="Common\MatchingPortal\Services\Interfaces\IExportService.cs" />
     <Compile Include="Common\MatchingPortal\Services\Interfaces\IFilterService.cs" />
     <Compile Include="Common\MatchingPortal\Services\Interfaces\IProductMatchingService.cs" />
     <Compile Include="Common\MatchingPortal\Services\ProductMatchingService.cs" />
@@ -978,6 +981,7 @@
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>SearchReportRuntimeTextTemplate.cs</LastGenOutput>
     </None>
+    <None Include="stylecop1.json" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
