DIRAGBA-419 - Fix bugs, refactoring

--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -36,7 +36,7 @@
     </specialSources>
   </loggingConfiguration>
   <appSettings>
-    <add key="CakeApiKey" value="FCjdYAcwQE" />
+    <add key="CakeApiKey" value="WG63lt1m9nnHpnnpWl4lQ" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="BingApiToken" value="EW65911AO" />
     <add key="BingApiUsername" value="API_DanielOwen" />
