--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -12,17 +12,18 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="ClientPortalContext" connectionString="" providerName="System.Data.EntityClient" />
-    <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
-    <add name="ClientPortalSearchContext" connectionString="" providerName="System.Data.SqlClient" />
-    <add name="DAContext" connectionString="" providerName="System.Data.SqlClient" />
+      <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+      <add name="ClientPortalProgContext" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+      <add name="ClientPortalSearchContext" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+      <add name="DAContext" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+      <add name="DAData" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DA_Data;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
     <add name="CakeExtracter.Data.CakeTraffic.CakeTrafficContext" connectionString="CakeExtracter.Data.CakeTraffic.CakeTrafficContext_ConnectionString" providerName="System.Data.SqlClient" />
     <add name="ClientPortal.Data.Contexts.ClientPortalDWContext" connectionString="ClientPortal.Data.Contexts.ClientPortalDWContext_ConnectionString" providerName="System.Data.SqlClient" />
     <add name="ClientPortal.Data.Entities.TD.TDContext" connectionString="ClientPortal.Data.Entities.TD.TDContext_ConnectionString" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="DefaultConnection_ConnectionString" providerName="System.Data.SqlClient" />
     <add name="DirectAgents.Domain.Entities.Wiki.WikiContext" connectionString="DirectAgents.Domain.Entities.Wiki.WikiContext_ConnectionString" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <entityFramework codeConfigurationType="DirectAgents.Domain.Contexts.Configurations.AzureConfiguration, DirectAgents.Domain">
+
   <entityFramework codeConfigurationType="CakeExtracter.Data.Configurations.AzureConfiguration, CakeExtracter">
     <contexts>
       <!--<context type="DirectAgents.Domain.Contexts.DAContext, DirectAgents.Domain" disableDatabaseInitialization="true"/>-->
