--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -172,6 +172,10 @@
     <Compile Include="MigrationsTD\202005191104096_AddMatchTypeSearchTerm.Designer.cs">
       <DependentUpon>202005191104096_AddMatchTypeSearchTerm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\202006021113506_ExtendPrimaryKeyRokuSummary.cs" />
+    <Compile Include="MigrationsTD\202006021113506_ExtendPrimaryKeyRokuSummary.Designer.cs">
+      <DependentUpon>202006021113506_ExtendPrimaryKeyRokuSummary.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.cs" />
     <Compile Include="Migrations\201909270822065_Mig_Affiliate_AccountManager.Designer.cs">
       <DependentUpon>201909270822065_Mig_Affiliate_AccountManager.cs</DependentUpon>
@@ -1239,6 +1243,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\202005191104096_AddMatchTypeSearchTerm.resx">
       <DependentUpon>202005191104096_AddMatchTypeSearchTerm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\202006021113506_ExtendPrimaryKeyRokuSummary.resx">
+      <DependentUpon>202006021113506_ExtendPrimaryKeyRokuSummary.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
