DIRAGBA-391 update config file

--- a/3/DirectAgents.Web/CakeExtractor.SqlScriptRunner/App.config
+++ b/3/DirectAgents.Web/CakeExtractor.SqlScriptRunner/App.config
@@ -6,11 +6,11 @@
   </configSections>
   
   <connectionStrings>
-    <add name="DataBaseConnectionString" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="DataBaseConnectionString" connectionString=""/>
   </connectionStrings>
 
   <appSettings>
-    <add key="SqlScriptsFolderPath" value="./SQL/" />
+    <add key="SqlScriptsFolderPath" value="" />
   </appSettings>
   
   
