--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -36,11 +36,11 @@
     </specialSources>
   </loggingConfiguration>
   <appSettings>
-    <add key="CakeApiKey" value="FCjdYAcwQE" />
+    <add key="CakeApiKey" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="BingApiToken" value="EW65911AO" />
+    <add key="BingApiToken" value="" />
     <add key="BingApiUsername" value="API_DanielOwen" />
-    <add key="BingApiPassword" value="agentdan1" />
+    <add key="BingApiPassword" value="" />
     <add key="BingReportFolder" value="C:\Downloads" />
     <add key="BingReportFilename" value="bingrep.zip" />
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
@@ -50,7 +50,7 @@
   <connectionStrings>
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalTest;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="CakeTrafficContext" connectionString="data source=.;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+    <add name="CakeTrafficContext" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
