--- a/3/DirectAgents.Web/Roku/packages.config
+++ b/3/DirectAgents.Web/Roku/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="RestSharp" version="106.10.1" targetFramework="net48" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
+  <package id="RestSharp" version="106.3.1" targetFramework="net461" />
 </packages>
